[package]
name = "Cartographer"
version = "0.1.0"
authors = ["Starz0r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
serde = {version = "1.0.114", features = ["derive", "rc"] }
serde_json = {version = "1.0.56", features = ["raw_value"] }
structopt = "0.3.16"
