[package]
name = "Cartographer"
version = "0.5.0"
authors = ["Starz0r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "=1.4.0"
serde = { version = "=1.0.115", features = ["derive", "rc"] }
serde_json = { version = "=1.0.57", features = ["raw_value"] }
structopt = "0.3.16"
scopeguard = "=1.1.0"
anyhow = "=1.0.66"
clap = { version = "=4.0.29", features = ["derive"] }
hashbrown = "=0.13.1"
tracing = "=0.1.37"

[dev-dependencies]
clap_lex = { version = "=0.3.0" }